# toDoApp/internal/todo/handler.go
@@ -3,6 +3,8 @@ package todo
 import (
 	"net/http"
 	"time"
+	"toDo/configs"
+	"toDo/pkg/middleware"
 	"toDo/pkg/request"
 	"toDo/pkg/response"
 
@@ -10,19 +12,25 @@ import (
 	"gorm.io/gorm"
 )
 
-type TaskHandler struct {
+type TaskHandlerDeps struct {
 	TaskRepository *TaskRepository
+	Config         *configs.Config
 }
 
-func NewTaskHandler(router *http.ServeMux, tr *TaskRepository) {
+type TaskHandler struct {
+	TaskRepository *TaskRepository
+	Config         *configs.Config
+}
+
+func NewTaskHandler(router *http.ServeMux, deps TaskHandlerDeps) {
 	th := &TaskHandler{
-		TaskRepository: tr,
+		TaskRepository: deps.TaskRepository,
 	}
 	router.HandleFunc("GET /tasks", th.GetTasks())
 	router.HandleFunc("GET /tasks/{id}", th.GetTask())
-	router.HandleFunc("POST /tasks", th.CreateTask())
-	router.HandleFunc("PUT /tasks/{id}", th.UpdateTask())
-	router.HandleFunc("DELETE /tasks/{id}", th.DeleteTask())
+	router.Handle("POST /tasks", middleware.IsAuthed(th.CreateTask(), deps.Config))
+	router.Handle("PUT /tasks/{id}", middleware.IsAuthed(th.UpdateTask(), deps.Config))
+	router.Handle("DELETE /tasks/{id}", middleware.IsAuthed(th.DeleteTask(), deps.Config))
 }
 
 // @Summary		Get all tasks
@@ -48,6 +56,7 @@ func (th *TaskHandler) GetTasks() http.HandlerFunc {
 // @Produce		json
 // @Param			id	path		string	true	"Task ID"
 // @Success		200	{object}	Task
+// @Failure		404	{string}	string	"Task not found"
 // @Router			/tasks/{id} [get]
 func (th *TaskHandler) GetTask() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
@@ -67,11 +76,12 @@ func (th *TaskHandler) GetTask() http.HandlerFunc {
 // @Accept			json
 // @Produce		json
 // @Param			task	body		TaskCreateRequest	true	"Task to create"
-// @Success		200		{object}	Task
+// @Success		201		{object}	Task
+// @Failure		400		{string}	string	"Invalid input"
+// @Failure		500		{string}	string	"Internal server error"
 // @Router			/tasks [post]
 func (th *TaskHandler) CreateTask() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-
 		body, err := request.HandleBody[TaskCreateRequest](&w, r)
 		if err != nil {
 			http.Error(w, err.Error(), http.StatusBadRequest)
@@ -95,6 +105,9 @@ func (th *TaskHandler) CreateTask() http.HandlerFunc {
 // @Param			id		path		string	true	"Task ID"
 // @Param			task	body		TaskUpdateRequest	true	"Task to update"
 // @Success		200		{object}	Task
+// @Failure		400		{string}	string	"Invalid input"
+// @Failure		404		{string}	string	"Task not found"
+// @Failure		500		{string}	string	"Internal server error"
 // @Router			/tasks/{id} [put]
 func (th *TaskHandler) UpdateTask() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
@@ -153,6 +166,8 @@ func (th *TaskHandler) UpdateTask() http.HandlerFunc {
 // @Tags			tasks
 // @Param			id	path	string	true	"Task ID"
 // @Success		204
+// @Failure		404	{string}	string	"Task not found"
+// @Failure		500	{string}	string	"Internal server error"
 // @Router			/tasks/{id} [delete]
 func (th *TaskHandler) DeleteTask() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
