# toDoApp/internal/user/model.go
@@ -1,0 +1,14 @@
+package user
+
+import "gorm.io/gorm"
+
+type User struct {
+	gorm.Model
+	Phone string `gorm:"uniqueIndex"`
+}
+
+type Session struct {
+	gorm.Model
+	SessionId string
+	Code      string
+}
